objects/nMAPPER__Geocoding_Field_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A set of field mappings for use by the geocoding trigger and batch geocoder.</description>
    <fields>
        <fullName>nMAPPER__City_Field__c</fullName>
        <label>City Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Country_Field__c</fullName>
        <label>Country Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Latitude_Field__c</fullName>
        <label>Latitude Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Longitude_Field__c</fullName>
        <label>Longitude Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Object_Name__c</fullName>
        <description>This is the sObject the other mapped fields are on.</description>
        <inlineHelpText>This is the sObject the other mapped fields are on.</inlineHelpText>
        <label>sObject Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__State_Field__c</fullName>
        <label>State Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Street_Field__c</fullName>
        <label>Street Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Zip_Code_Field__c</fullName>
        <label>Zip Code Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Geocoding Field Map</label>
</CustomObject>